little correction for modal link

--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -30,7 +30,7 @@
 <a href="../tabs/tabs/index.html" target="_blank" rel="noopener noreferrer">Табы</a>
 <br>
 <br>
-<a href="../modal/modal/index.html">Модальное окно</a>
+<a href="../modal/modal/index.html" target="_blank">Модальное окно</a>
 </div>
 </body>
 </html>
