--- a/lesson4/tabs/tabs/index.html
+++ b/lesson4/tabs/tabs/index.html
@@ -18,7 +18,19 @@
         <div id="contents">
             <div class="content active" data-content="1">Content 1</div>
             <div class="content" data-content="2">Content 2</div>
-            <div class="content" data-content="3">Content 3</div>
+            <div class="content" data-content="3">
+                
+                <div id="tabs-dop">
+                <div class="tab-btndop active" data-btndop="1">1</div>
+                <div class="tab-btndop" data-btndop="2">2</div>
+                </div>
+                <div id="contents-dop">
+                    <div class="content-dop active" data-contentdop="1">Content 1</div>
+                    <div class="content-dop" data-contentdop="2">Content 2</div>
+                </div>
+            </div>
+                
+                </div>
         </div>
     </div>
     <script src="main.js"></script>
